Add random button

--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,92 @@
 .container {
+    width: 500px;
+    margin: 20px auto;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    align-items: center;
+}
+
+.container-divBtn{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-}
-
-.input-container {
-  margin-bottom: 16px;
-}
-
-.button-container {
-  margin-bottom: 16px;
-}
-
-.facts-container {
-  display: flex;
   justify-content: center;
 }
 
-.fact-card {
+.container-input{
+  display: flex;
+  align-items: center;
+}
+
+ input {
+  margin: auto;
+  margin-bottom: 16px;
+  margin-top: 20px;
+  display: flex;
+  padding: 20px;
+  outline: unset;
+
+  text-align: left;
+}
+
+.button-container {
+    margin: 1em;
+    background-color: #000000;
+    color: #ffffff;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    width: 30%;
+    margin-bottom: 30px;
+    font-size: 10px;
+    white-space: nowrap;
+}
+
+.button-red-container {
+    margin: 1em;
+    background-color: #ff0000;
+    color: #ffffff;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    width: 30%;
+    margin-bottom: 30px;
+    font-size: 10px;
+    white-space: nowrap;
+}
+
+.box-container {
+  display: inline-block;
+}
+
+.box-card {
   margin: 8px;
   padding: 16px;
+  width: 200px;
+  height: 300px;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #f8f8f8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  float: left;
 }
 
-.fact-card h2 {
-  font-size: 20px;
+.box-card h2 {
+  font-size: 16px;
   margin-bottom: 8px;
   text-align: center;
+}
+
+.box-card p {
+  font-size: 10px;
+  text-align: center;
+}
+
+.box-card {
+  margin-bottom: 20px;
 }
 
 .image-container {
@@ -43,18 +100,11 @@
   height: auto;
 }
 
-.fact-card p {
-  font-size: 16px;
-  text-align: center;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.fact-card {
-  margin-bottom: 20px;
+.text{
+    font-size: 50px;
+    width: 80%;
+    margin: 0 auto;
+    white-space: pre-line;
+    text-align: center;
 }
 
